WIP: files which start with "#define PAMPHLET_PREPROCESSOR" will now be preprocessed using the embedded mcpp preprocessor. Need to add support for working with the DEBUG variants

--- a/meta/test/index.html
+++ b/meta/test/index.html
@@ -1,7 +1,13 @@
+#define PAMPHLET_PREPROCESSOR
+#define HELLO(x) Hello x!
+
 <html>
-  <head>
-  </head>
-  <body>
-    Hello World!
-  </body>
+<head>
+</head>
+<body>
+	HELLO(dog)
+	HELLO(cat)
+	HELLO(pineapple)
+	HELLO(world)
+</body>
 </html>
