removed hack to process macros in string literals

--- a/meta/test1.html
+++ b/meta/test1.html
@@ -1,3 +1,5 @@
 #define PAMPHLET_PREPROCESSOR
-#define HELLO(x) "Hello x!"
+#define Q(x) #x
+#define QUOTE(x) Q(x)
+#define HELLO(x) QUOTE(Hello x!)
 HELLO(dog)HELLO(cat)HELLO(pineapple)HELLO(world)
