re-implemented the "allow preprocessing of string literal contents"

--- a/meta/test1.html
+++ b/meta/test1.html
@@ -1,5 +1,3 @@
 #define PAMPHLET_PREPROCESSOR
-#define Q(x) #x
-#define QUOTE(x) Q(x)
-#define HELLO(x) QUOTE(Hello x!)
-HELLO(dog)HELLO(cat)HELLO(pineapple)HELLO(world)
+#define HELLO(x) 'Hello x!'
+"HELLO(dog)HELLO(cat)HELLO(pineapple)HELLO(world)"
