different mange options; attempt to remove Pamphlet as a dependency and still get the command line tool to build...

--- a/Tests/PamphletFrameworkTests/Pamphlet/test6.html
+++ b/Tests/PamphletFrameworkTests/Pamphlet/test6.html
@@ -14,6 +14,11 @@
         	alert("Hello, World")
         }
 
+        function myCar() {
+            let horse = 5;
+            let jaguar = 10;
+            return horse + jaguar;
+        }
 
         
     </script>
