--- a/Tests/PamphletFrameworkTests/Pamphlet/test6.html
+++ b/Tests/PamphletFrameworkTests/Pamphlet/test6.html
@@ -1,3 +1,5 @@
+#define PAMPHLET_PREPROCESSOR
+
 <html>
 <head>
     
@@ -21,6 +23,9 @@
         }
 
         
+    </script>
+    <script>
+        #include <./script2.js>
     </script>
 </body>
 </html>
