use fullpath for variable names

--- a/Tests/PamphletFrameworkTests/Pamphlet/test6.html
+++ b/Tests/PamphletFrameworkTests/Pamphlet/test6.html
@@ -25,7 +25,7 @@
         
     </script>
     <script>
-        #include <./script2.js>
+        #include <./script.js>
     </script>
 </body>
 </html>
