--- a/Tests/PamphletFrameworkTests/Pamphlet/test7.html
+++ b/Tests/PamphletFrameworkTests/Pamphlet/test7.html
@@ -2,7 +2,18 @@
 #nbmacro REGEX(X)
 X
 #endmacro
+#macro REGEX2(X)
+X
+#endmacro
 REGEX(/(?:
+#f|
+term1|
+term2|
+term3|
+term with space
+)/i
+)
+REGEX2(/(?:
 #f|
 term1|
 term2|
